Vanilla example working with routing

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <div class="col-10">
         <ul>
           <li><a href="vanilla.html">Vanilla JS</a></li>
+          <li><a href="vanilla-start.html">Vanilla JS - Empty project</a></li>
+          <li><a href="vanilla-routing-auth0.html">Vanilla JS - With Auth0</a></li>
         </ul>
       </div>
     </div>
