Moved JS from .html to separate .js file

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -112,46 +112,6 @@
 <script src="./router.js"></script>
 <script src="./auth.js"></script>
 
-<script>
-  const API_URL = "https://wt-13aebf4eeaa9913542725d4a90e4d49e-0.run.webtask.io/clickbaiter";
-  const API_AUTH0_URL = "https://wt-13aebf4eeaa9913542725d4a90e4d49e-0.run.webtask.io/clickbaiter-auth0";
-
-  //Reset token
-  localStorage.removeItem("access_token");
-
-  auth.useAuth0 = false;
-  let serverUrl = auth.useAuth0 ? API_AUTH0_URL : API_URL;
-
-  const headlineBtn = document.querySelector("#headline");
-  const secretBtn = document.querySelector("#secret");
-  const loginBtn = document.querySelector(auth.useAuth0 ? "#loginModalBtn" : "#loginBtn");
-  const logoutBtn = document.querySelector("#logoutBtn");
-
-  headlineBtn.addEventListener("click", () => {
-    fetcher(serverUrl + "/headline");
-  });
-
-  secretBtn.addEventListener("click", (event) => {
-    fetcher(serverUrl + "/protected/headline");
-  });
-
-  logoutBtn.addEventListener("click", (event) => {
-    auth.logout();
-    UIUpdate.loggedOut();
-  });
-
-  loginBtn.addEventListener("click", (event) => {
-    auth.login().then(() => UIUpdate.loggedIn());
-  });
-
-  router.addRoute([{
-    name: "main",
-    isProtected: false
-  }, {
-    name: "secret",
-    isProtected: true
-  }]);
-
-</script>
+<script src="./index.js"></script>
 </body>
 </html>
