--- a/vanilla-oauth/index.html
+++ b/vanilla-oauth/index.html
@@ -72,9 +72,9 @@
     </span>
 </div>
 
-<script src="vendor/js/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="vendor/js/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="vendor/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="vendor/js/jquery-3.4.1.min.js"></script>
+<script src="vendor/js/popper.min.js"></script>
+<script src="vendor/js/bootstrap.min.js"></script>
 <script src="vendor/js/auth0.min.js"></script>
 
 <script src="./ui-update.js"></script>
